added helper folder and worked to have all contributions work together
