# Routes/companiesRouter.js
@@ -1,6 +1,6 @@
 const express = require('express');
 
-const controller = require('../Controllers/compniesController');
+const controller = require('../Controllers/companiesController');
 const validator = require('../middleware/companies-validator');
 
 const router = express.Router();
@@ -8,8 +8,8 @@ const router = express.Router();
 
 router.get('/', controller.getData);
 router.get('/:id', controller.getDataById);
-router.post('/', validator.saveData, controller.createData);
-router.put('/:id', validator.saveData, controller.updateData);
+router.post('/', validator.collection, controller.createData);
+router.put('/:id', validator.collection, controller.updateData);
 router.delete('/:id', controller.deleteData);
 
 module.exports = router;
